Reorganize the project